# email_service

./: .env  .gitignore  README.md  app.py  app_index.html  email_utils.py  index.html  main.py  otp_utils.py  pyproject.toml  requirements.txt
contact-form-app/: package-lock.json  package.json
contact-form-app/src/: App.css  App.js  index.js
contact-form-app/src/components/: AlertContainer.js  ContactForm.js  DebugPanel.js  Header.js  OtpVerification.js  StepIndicator.js  SuccessStep.js
